tests/files/type_checker_tests/should_pass/000.cmdr
//Should allow redefining variables as functions
add = 3;
add(x, y) {
	return x + y;
}