tests/files/type_checker_tests/should_fail/048.cmdr
//Should fail when trying to call something with incorrect types of parameters
add(x: int, y: int) {
	return x + y;
}
z = add(1, true);